# libnn

./: README  README.adoc  configure.ac
src/: Makefile.am
src/CXX/: Makefile.am
src/CXX/libnn/: Makefile.am
src/CXX/libnn/io/: Makefile.am  feed_forward.hxx  nn.hxx  perceptron.hxx  sigmoid.hxx
src/CXX/libnn/math/: Makefile.am  common.hxx  sigmoid.hxx  util.hxx
src/CXX/libnn/misc/: Makefile.am  fixable.hxx
src/CXX/libnn/ml/: Makefile.am  backpropagation.hxx  computation.hxx  nn_func.hxx
src/CXX/libnn/model/: Makefile.am  feed_forward.hxx  perceptron.hxx
src/CXX/libnn/topo/: Makefile.am  nn.hxx
src/CXX/unit_test/: Makefile.am
src/CXX/unit_test/io/: Makefile.am  serialisation.cxx  serialisation.sh
src/CXX/unit_test/math/: Makefile.am  sigmoid.cxx  sigmoid.sh
src/CXX/unit_test/ml/: Makefile.am  backpropagation.cxx  backpropagation.sh  computation.cxx  computation.sh  nn_func.cxx  nn_func.sh
src/CXX/unit_test/model/: Makefile.am  feed_forward.cxx  feed_forward.sh  perceptron.cxx  perceptron.sh
src/CXX/unit_test/topo/: Makefile.am  nn.cxx  nn.sh
src/Perl/: Makefile.am  nn2dot.pl
