# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror -DENABLE_DEBUG
AM_LDFLAGS  =

# Unit test scripts
TESTS = \
    nn_func.sh \
    backpropagation.sh


# Unit test programs
check_PROGRAMS = \
    backpropagation \
    nn_func

backpropagation_SOURCES = \
    backpropagation.cxx

nn_func_SOURCES = \
    nn_func.cxx
