# Compiler & linker flags
AM_CXXFLAGS = -g -Wall -Werror -DENABLE_DEBUG
AM_LDFLAGS  =

# Unit test scripts
TESTS = \
    feed_forward.sh \
    perceptron.sh


# Unit test programs
check_PROGRAMS = \
    feed_forward \
    perceptron

feed_forward_SOURCES = \
    feed_forward.cxx

perceptron_SOURCES = \
    perceptron.cxx
